--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: "3.9"
 services:
   pysonet_back:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+    command: >
+      bash -c "python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/usr/src/app/
     ports:
